# algs

./: CMakeLists.txt  sorting.cpp
src/: CMakeLists.txt  insertion_sort.hpp  sorting_algs.hpp
test/: CMakeLists.txt  sort_tests.cpp
